Refactor Tomcat environment variables and aliases to suppport configuration of two different Tomcat servers on the Data Package Manager. Also allow for consistent Tomcat environment regardless of whether Tomcat is started in init.d or manually using the "tomcat_startup" alias.